Revert changes in header as it did not solve the overflow-x problem

--- a/src/core/components/Header/header.less
+++ b/src/core/components/Header/header.less
@@ -9,7 +9,6 @@
 .header {
   background: @darkBlue;
   position: relative;
-  padding: 1vh 4vw;
 }
 
 .grid {
@@ -20,6 +19,7 @@
   margin: auto;
   justify-content: space-between;
   align-items: center;
+  padding: 10px 20px;
 }
 
 .menuButton {
